--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -2,8 +2,14 @@
 
 //Salmon Sushi fargepalleten: 
 
+//babyblue = bakgrunnsfarge
+//salmon  = headerfarge 
+//aquamarine = arbeidslogfarge
+//svart = tekstfarge
+
 $babyblue: #E7F2F8; 
 $aquamarine: #74BDCB; 
 $salmon: #FFA384; 
 $freesia: #EFE7BC; 
+$black: #000000; 
 
