--- a/src/styles/partials/home.scss
+++ b/src/styles/partials/home.scss
@@ -19,3 +19,34 @@ main {
 
     }
 }
+
+.member {
+    padding: 1rem;
+
+    h1 {
+        margin-bottom: 1rem;
+    }
+
+    &__grid {
+        display: grid;
+        grid-template-columns: repeat(4,  1fr);
+        gap: 0;
+    }
+}
+
+.profileCard {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    width: 100%;
+    border-radius: 0px;
+    padding: 0rem;
+    background-color: #fff;
+    color: #000;
+    text-align: center;
+
+    img {
+        width: 194px;
+        height: 492px;
+    }
+}
