--- a/src/styles/profilepage.scss
+++ b/src/styles/profilepage.scss
@@ -15,6 +15,7 @@ body {
     width: 100%;
     background-color: #fff;
     color: #000;
+    padding: 5rem;
 
     &__container {
         display: flex;
