--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -42,16 +42,35 @@ body {
 .work-log {
     h1 {
         color: colors.$black;
+        font-family: fonts.$montserrat;
     }
 
-    ul {
-        list-style: none;
-        width: 100%;
-        text-align: left;
+    div {
+        display: grid;
 
-        li {
-            color: colors.$black;
+        ul {
+            list-style: none;
+            width: 100%;
+            text-align: left;
+            padding: .2rem 0;
+            margin: 0;
+            display: grid;
+            grid-template-columns: .4fr .5fr 2fr .25fr;
+    
+            li {
+                color: colors.$black;
+                background-color: colors.$aquamarine;
+                padding: 1rem;
+                text-align: left;
+                
+            }
+
+            //https://developer.mozilla.org/en-US/docs/Web/CSS/:nth-child
+            li:nth-child(4n + 4) {
+                text-align: right;
+            }
         }
+    
     }
 
 }
