--- a/src/styles/profilepage.scss
+++ b/src/styles/profilepage.scss
@@ -12,7 +12,8 @@ body {
 }
 
 .profilePage {
-    width: 100%;
+    width: 80%;
+    max-width: 1600px;
     background-color: #fff;
     color: #000;
     padding: 5rem;
